--- a/src/components/ui/app-task-list/TaskList.css
+++ b/src/components/ui/app-task-list/TaskList.css
@@ -15,6 +15,6 @@
 }
 .task-content-description {
     font-size: 18px;
+    white-space: pre-wrap;
     line-height: 1.2;
-    overflow: hidden;
 }
